add_executable( convert.x convert.c )
add_executable( grdecl_test.x grdecl_test.c )
add_executable( kw_list.x kw_list.c )
add_executable( grid_info.x grid_info.c )
add_executable( grid_dump.x grid_dump.c )
add_executable( grid_dump_ascii.x grid_dump_ascii.c )
add_executable( summary.x view_summary.c )
add_executable( select_test.x select_test.c )
add_executable( load_test.x load_test.c )


set(program_list load_test.x grdecl_test.x grid_dump_ascii.x select_test.x grid_dump.x convert.x kw_list.x grid_info.x summary.x)
foreach(prog ${program_list})
   target_link_libraries( ${prog} ecl_shared util_shared geometry_shared )
   #-----------------------------------------------------------------
   if (ECL_INSTALL_PREFIX)
      set (destination ${CMAKE_INSTALL_PREFIX}/${ECL_INSTALL_PREFIX}/bin)
   else()
      set (destination ${CMAKE_INSTALL_PREFIX}/bin)
   endif()

   install(TARGETS ${prog} DESTINATION ${destination})
   if (INSTALL_GROUP)
      install(CODE "EXECUTE_PROCESS(COMMAND chgrp ${INSTALL_GROUP} ${destination}/${prog})")
      install(CODE "EXECUTE_PROCESS(COMMAND chmod g+w ${destination}/${prog})")
   endif()
endforeach()
